# QF635Project

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  system_architecture_final.md
configs/: backtest_as.toml  backtest_example.toml  binance_testnet.toml  mm_examples.toml  paper_example.toml  sample_data.csv
dashboard/: index.html  package-lock.json  package.json  tsconfig.json
dashboard/src/: App.tsx
dashboard/src/components/: AccountPanel.tsx  FillsPanel.tsx  LatencyPanel.tsx  LogViewer.tsx  MarketDataPanel.tsx  NavBar.tsx  OpenOrdersPanel.tsx  OrdersPanel.tsx  PnlChart.tsx  PositionPanel.tsx  RiskPanel.tsx  RoutingPanel.tsx  SignalsPanel.tsx  ThemeToggle.tsx
dashboard/src/hooks/: strategyCommands.ts  useFlowPulse.ts  usePipelineSocket.ts  useStatePoll.ts
dashboard/src/pages/: AnalyticsPage.tsx  ArchitecturePage.tsx  BacktestPage.tsx  DashboardPage.tsx  KillSwitchPage.tsx  LogsPage.tsx
dashboard/src/store/: pipelineStore.ts
dashboard/src/theme/: ThemeModeContext.ts  theme.ts
dashboard/src/utils/: chartTooltip.ts  formatNum.ts  formatTs.ts
docs/: system_architecture.md  system_architecture_final.md
docs/architecture/: README.md  backtesting.md  components.md  dashboard.md  data-contracts.md  engineering-practices.md  overview.md  project-structure.md  roadmap.md  technology-stack.md
docs/architecture/components/: backtest.md  event-bus.md  feed-handler.md  oms.md  order-gateways.md  plugins.md  position.md  risk.md  strategy.md
docs/architecture/infrastructure/: deployment.md  observability.md  storage.md
scripts/: demo_risk_ws.py  probe_binance_data.py
src/trading/: __init__.py  health.py  logging.py
src/trading/analytics/: __init__.py  avellaneda_stoikov.py  classifiers.py  glft.py  imbalance.py  microprice.py  position_sizing.py  quote_filters.py  realtime_risk.py  service.py  volatility.py  vpin.py
src/trading/backtest/: __init__.py  data_source.py  engine.py  gateway.py  metrics.py  order_gateway.py  report.py
src/trading/config/: __init__.py  builder.py  loader.py  schema.py  settings.py  settings_standalone.py
src/trading/core/: __init__.py  clock.py  events.py  exceptions.py  instruments.py  positions.py  types.py
src/trading/event_bus/: __init__.py  asyncio_bus.py  base.py  kafka_bus.py  memory_bus.py
src/trading/feed_handler/: __init__.py  base.py  engine.py  normalizer.py  order_book.py  sequencer.py
src/trading/gateways/: __init__.py  base.py  rate_limiter.py  registry.py  sim_config.py  simulation.py
src/trading/monitoring/: __init__.py  dashboard_server.py  event_logging.py  heartbeat.py  latency.py
src/trading/oms/: __init__.py  engine.py  order.py  router.py  state_machine.py
src/trading/order_gateways/: __init__.py  base.py  rate_limiter.py  registry.py  sim_config.py  simulation.py  simulation_plugin.py
src/trading/plugins/: __init__.py  builtin.py  context.py  (+2 more)
tests/: conftest.py  test_event_bus.py  test_events.py  test_normalizer.py
tests/integration/: test_as_strategy_integration.py  test_binance_wiring.py  test_config_and_builder.py  test_pipeline.py
tests/unit/: test_analytics_as.py  test_analytics_glft.py  test_analytics_imbalance.py  test_analytics_microprice.py  test_analytics_position_sizing.py  test_analytics_realtime_risk.py  test_analytics_volatility.py  test_analytics_vpin.py  test_as_strategy_signals.py  test_backpressure.py  test_binance_depth_and_reconciler.py  test_binance_foundation.py  test_binance_gateway.py  test_binance_order_gateway.py  test_binance_ws.py  test_core.py  test_dashboard_killswitch.py  test_dashboard_strategy.py  test_event_bus.py  test_execution_routing.py  test_health.py  test_new_mm_strategies.py  test_normalizer.py  test_oms.py  test_oms_cancel_strategy.py  test_order_adoption.py  test_position_accounting.py  test_reconcile_amend.py  test_registry_diagnostics.py  test_registry_pause.py  test_risk_rules.py  test_self_trade_prevention.py  test_snapshots.py  test_stale_orders.py  test_state_bootstrap.py  test_strategy_attribution.py  test_working_orders.py
(+126 files in other folders)
