[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microstructure-mm"
version = "0.1.0"
description = "Standalone microstructure MM prototype (Binance connectivity, bus, normalizers)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "websockets>=12.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trading"]

[project.optional-dependencies]
# Messaging backends
bus = [
  "aiokafka>=0.10.0",
  "confluent-kafka>=2.5.0",
]

# Datastores and files
storage = [
  "psycopg[binary]>=3.1",
  "SQLAlchemy>=2.0, <2.1",
  "alembic>=1.13",
  "redis>=5.0",
  "pyarrow>=15.0",
  "pandas>=2.2",
  "boto3>=1.34",
  "minio>=7.2",
]

# Observability
observability = [
  "structlog>=24.1",
  "python-json-logger>=2.0",
  "prometheus-client>=0.20",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
]

# Analytics / research
analytics = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "plotly>=5.20",
]

# Testing / quality
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.9",
  "ruff>=0.4",
]

# Developer convenience
dev = [
  "python-dotenv>=1.0",
  "typer>=0.12",
  # Full dev env: include analytics, observability, storage, and test stacks
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "structlog>=24.1",
  "python-json-logger>=2.0",
  "prometheus-client>=0.20",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "psycopg[binary]>=3.1",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "redis>=5.0",
  "pyarrow>=15.0",
  "boto3>=1.34",
  "minio>=7.2",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.9",
  "ruff>=0.4",
]
